Add rpc call and lncli command for retrieving LND's TLS cert
